# coding-model-seeks-gpu

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  RELEASE-NOTES.md  UPDATE-MODEL.md  cloudbuild.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
pipeline/: README.md  pyproject.toml
pipeline/pipeline/: config.py  enrichment.py  errors.py  gpu_nodes.py  main.py  notify.py
pipeline/pipeline/exporters/: json_export.py
pipeline/pipeline/snapshots/: __init__.py  alias_map.py  constants.py  exporter.py  generator.py  git_repo.py  reader.py
pipeline/pipeline/sources/: NVLink.html  dbgpu_source.py  gb200_specs.md  gh200_specs.md  gpuhunt_source.py  huggingface.py  litellm_source.py  param_counter.py  rtx5000ada_specs.md  rtx6000ada_specs.md  rtxpro6000_specs.md
pipeline/scripts/: backfill_gpu_price_history.py
pipeline/tests/: conftest.py  test_alias_map.py  test_api_pricing_pipeline.py  test_check_missing_mappings.py  test_gpu_nodes.py  test_gpu_price_history.py  test_gpu_specs_completeness.py  test_gpuhunt_interconnect.py  test_hf_kv_fields.py  test_license.py  test_litellm_source.py  test_notify.py  test_param_counter.py  test_snapshot_exporter.py  test_snapshot_generator.py
scripts/: run_daily.sh
specs/: size-toggle-spec.md
web/: README.md  next.config.ts  package-lock.json  package.json
web/public/: CNAME
web/public/data/: api_pricing.json  gpu_price_history.json  gpu_source.json  gpu_specs.json  gpus.json  metadata.json  models.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: budget-chart.tsx  (+23 more)
(+102 files in other folders)
